--- a/templates/pdf.quadspinner/styles/default.css
+++ b/templates/pdf.quadspinner/styles/default.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Assistant:200,300,400,600,700|Overpass:100,300,400|Overpass+Mono');
+/* Copyright (c) Microsoft Corporation. All Rights Reserved. Licensed under the MIT License. See License.txt in the project root for license information. */
+
+
 thead { display: table-header-group }
 
 tfoot { display: table-row-group }
@@ -11,14 +15,14 @@ tr { page-break-inside: avoid }
 }
 
 html {
-    font-family: 'Segoe UI', sans-serif !important;
+    font-family: 'Assistant', 'Segoe UI', Tahoma, Helvetica, sans-serif;
     line-height: 1.15;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%
 }
 
 body {
-    margin: 0
+    margin: 5%;
 }
 
 article,
@@ -52,7 +56,7 @@ hr {
 }
 
 pre {
-    font-family: 'Consolas' !important;
+    font-family: 'Operator Mono' !important;
     font-size: 1em
 }
 
@@ -117,7 +121,7 @@ pre,
 samp {
     -moz-osx-font-smoothing: auto;
     -webkit-font-smoothing: auto;
-    font-family: 'Consolas' !important;
+    font-family: 'Operator Mono' !important;
     line-height: 1.25;
     font-size: 1em
 }
@@ -413,7 +417,7 @@ code,
 kbd,
 pre,
 samp {
-    font-family: 'Consolas' !important;
+    font-family: 'Operator Mono' !important;
 }
 
 h1 {
