--- a/docs/styles/docfx.css
+++ b/docs/styles/docfx.css
@@ -1086,12 +1086,12 @@ div.embeddedvideo iframe {
   font-weight: 600 !important;
 }
 
-.toc .level2 a{
+.toc .level2 a {
   font-size: 16px !important;
   font-weight: 400 !important;
 }
 
-.toc .level3 a{
+.toc .level3 a {
   font-size: 15px !important;
   font-weight: 400 !important;
 }
@@ -1101,8 +1101,7 @@ div.embeddedvideo iframe {
   padding-right: 0px;
 }
 
-
-toc .level2 a.active, .level3 a.active{
+toc .level2 a.active, .level3 a.active {
   border-color: #928771;
   background-color: #eee;
   color: #fff;
@@ -1110,12 +1109,23 @@ toc .level2 a.active, .level3 a.active{
   padding: 3px 12px !important;
 }
 
-h1, h2{
+h1, h2 {
   letter-spacing: -1px;
 }
 
+h1 {
+  margin-top: 30px !important;
+}
+
+h1:first-child {
+  margin-top: 20px !important;
+}
+
 h3 {
-  font-weight: 400 !important;
+  font-family: "Assistant";
+  font-size: 16px;
+  font-weight: 700 !important;
+  opacity: 0.7;
 }
 
 p {
@@ -1138,11 +1148,10 @@ code {
   font-weight: 400 !important;
 }
 
-.table-qs, .table-qs tr, .table-qs td{
+.table-qs, .table-qs tr, .table-qs td {
   border: 0 !important;
   font-size: 14px;
 }
-
 
 tr td:nth-child(1) {
   width: 150px;
@@ -1157,17 +1166,30 @@ tr td:nth-child(2) {
 
 tr td:nth-child(2) em {
   font-family: "Assistant" !important;
-
 }
 
-.contribution-link{display: none !important;}
+.contribution-link {
+  display: none !important;
+}
 
-
-.TIP{
+.TIP, .WARNING, .NOTE {
   background: #fefefe !important;
+  font-size: 13px;
+  font-weight: 600;
+  border-radius: 0;
 }
 
-#affix a{
+.TIP h5, .WARNING h5, .NOTE h5 {
+  font-family: "Assistant";
+  font-weight: 400 !important;
+  font-size: 16px;
+}
+
+.TIP h5::before, .WARNING h5::before, .NOTE h5::before {
+  display: none;
+}
+
+#affix a {
   overflow-wrap: break-word;
-word-wrap: break-word !important;
+  word-wrap: break-word !important;
 }
