--- a/templates/quadspinner/styles/docfx.css
+++ b/templates/quadspinner/styles/docfx.css
@@ -1164,7 +1164,7 @@ tr td:nth-child(2) {
   color: #928771 !important;
   font-size: 12px !important; */
   /* border-color: #928771; */
-  background-color: #eedeab;
+  /* background-color: #eedeab; */
   color: #222;
   border-radius: 2px;
   padding: 3px 6px;
@@ -1174,10 +1174,14 @@ tr td:nth-child(2) {
   letter-spacing: -1px;
 }
 
-tr td:nth-child(2) em::before{
+tr{
+  border-bottom: 1px solid #000 !important;
+}
+
+/* tr td:nth-child(2) em::before{
   content: '>';
   padding-right: 5px;
-}
+} */
 tr td:nth-child(2) em {
   /* font-family: "Assistant" !important; */
   font-style: normal !important;
