--- a/docs/assets/custom/custom.css
+++ b/docs/assets/custom/custom.css
@@ -179,4 +179,13 @@ h3 {
   position: relative;
   top: -1px;
 }
+
+p {
+  margin-left: 2.5%;
+}
+
+h3 {
+  border-bottom: 1px solid #eaebeb;
+  padding-bottom: 5px;
+}
 /*# sourceMappingURL=custom.css.map */
