--- a/docs/assets/custom/dark.css
+++ b/docs/assets/custom/dark.css
@@ -70,4 +70,8 @@ a {
 .card-header {
   background-color: #14151728 !important;
 }
+
+h3 {
+  border-bottom: 1px solid #282b31;
+}
 /*# sourceMappingURL=dark.css.map */
