--- a/docs/assets/custom/custom.scss
+++ b/docs/assets/custom/custom.scss
@@ -73,7 +73,7 @@
 }
 
 code {
-  background-color: #eedc95;
+  background-color: #ffe57d;
   padding: 3px 6px;
   border-radius: 3px;
   color: #333333;
@@ -100,6 +100,7 @@ h2 {
 h3 {
   font-size: 18px;
   font-weight: 600;
+  margin-top: 36px;
 }
 
 .examples {
