--- a/docs/assets/custom/custom.css
+++ b/docs/assets/custom/custom.css
@@ -146,7 +146,7 @@ code {
   border-radius: 3px;
   color: #333333;
   font-weight: 400;
-  font-family: 'Roboto Mono';
+  font-family: "Roboto Mono";
 }
 
 .textcontent a {
@@ -155,11 +155,15 @@ code {
 
 h1 {
   font-size: 26px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #eaebeb;
 }
 
 h2 {
   font-size: 22px;
   margin-top: 36px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #eaebeb;
 }
 
 h3 {
