--- a/docs/assets/custom/dark.scss
+++ b/docs/assets/custom/dark.scss
@@ -82,6 +82,11 @@ a {
   background-color: #14151728 !important;
 }
 
+h1,h2{
+  color: #dde0e0;
+  border-bottom: 1px solid #6a6e78;
+}
+
 h3{
-  border-bottom: 1px solid #282b31;
+  border-bottom: 0;
 }
