--- a/docs/assets/custom/dark.css
+++ b/docs/assets/custom/dark.css
@@ -82,7 +82,12 @@ a {
   background-color: #14151728 !important;
 }
 
+h1, h2 {
+  color: #dde0e0;
+  border-bottom: 1px solid #6a6e78;
+}
+
 h3 {
-  border-bottom: 1px solid #282b31;
+  border-bottom: 0;
 }
 /*# sourceMappingURL=dark.css.map */
